<resources>
    <string name="app_name">HighFive</string>
    <string name="call_button">CALL</string>
    <string name="email_button">EMAIL</string>
    <string name="contact_profile_picture_content_description">Contact Profile Picture</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="cd_logo">App Logo</string>
    <string name="first_name_required">First Name (Required)</string>
    <string name="last_name_required">Last Name (Required)</string>
    <string name="email_required">Email (Required)</string>
    <string name="password_required">Password (Required)</string>
    <string name="phone_required">Phone (Required)</string>
    <string name="website_url">Website URL</string>
    <string name="company">Company</string>
    <string name="job_title">Job Title</string>
    <string name="submit">Submit</string>
    <string name="notes">Notes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rolodex">Rolodex</string>
    <string name="my_profile">My Profile</string>
    <string name="send_by_nfc">Send by NFC</string>
    <string name="send_by_qr">Send by QR</string>
    <string name="save_note">Save Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="log_out">Log Out</string>
</resources>
