<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewUserProfileImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_user" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_required"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/editTextLastName"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_required"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/editTextEmail"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_required"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/editTextPassword"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_required"
                android:inputType="textPassword"
                android:nextFocusDown="@id/editTextPhone"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_required"
                android:inputType="phone"
                android:nextFocusDown="@id/editTextWebsite"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website_url"
                android:nextFocusDown="@id/editTextCompany"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:inputType="textCapWords"
                android:nextFocusDown="@id/editTextJobTitle"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_title"
                android:inputType="textCapWords"
                android:paddingTop="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>